--- a/Nucleo/.classpath
+++ b/Nucleo/.classpath
@@ -4,29 +4,29 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Calendar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Framework"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/jdom.jar"/>
+	<classpathentry kind="lib" path="../lib/jdom.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Elecom"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Common"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/RuleEngine"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Tinylaf"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/batik-anim.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/batik-awt-util.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/batik-bridge.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/batik-codec.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/batik-css.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/batik-dom.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/batik-ext.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/batik-extension.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/batik-gui-util.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/batik-gvt.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/batik-parser.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/batik-script.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/batik-svg-dom.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/batik-svggen.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/batik-swing.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/batik-transcoder.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/batik-util.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/batik-xml.jar"/>
+	<classpathentry kind="lib" path="../lib/batik-anim.jar"/>
+	<classpathentry kind="lib" path="../lib/batik-awt-util.jar"/>
+	<classpathentry kind="lib" path="../lib/batik-bridge.jar"/>
+	<classpathentry kind="lib" path="../lib/batik-codec.jar"/>
+	<classpathentry kind="lib" path="../lib/batik-css.jar"/>
+	<classpathentry kind="lib" path="../lib/batik-dom.jar"/>
+	<classpathentry kind="lib" path="../lib/batik-ext.jar"/>
+	<classpathentry kind="lib" path="../lib/batik-extension.jar"/>
+	<classpathentry kind="lib" path="../lib/batik-gui-util.jar"/>
+	<classpathentry kind="lib" path="../lib/batik-gvt.jar"/>
+	<classpathentry kind="lib" path="../lib/batik-parser.jar"/>
+	<classpathentry kind="lib" path="../lib/batik-script.jar"/>
+	<classpathentry kind="lib" path="../lib/batik-svg-dom.jar"/>
+	<classpathentry kind="lib" path="../lib/batik-svggen.jar"/>
+	<classpathentry kind="lib" path="../lib/batik-swing.jar"/>
+	<classpathentry kind="lib" path="../lib/batik-transcoder.jar"/>
+	<classpathentry kind="lib" path="../lib/batik-util.jar"/>
+	<classpathentry kind="lib" path="../lib/batik-xml.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
