--- a/RuleEngine/bin/.classpath
+++ b/RuleEngine/bin/.classpath
@@ -2,56 +2,56 @@
 <classpath>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/dynagent/ruleengine/lib/antlr-2.7.5.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/dynagent/ruleengine/lib/arq.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/dynagent/ruleengine/lib/arq-extra.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/dynagent/ruleengine/lib/commons-logging-1.1.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/dynagent/ruleengine/lib/concurrent.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/dynagent/ruleengine/lib/icu4j_3_4.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/dynagent/ruleengine/lib/iri.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/dynagent/ruleengine/lib/jena.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/dynagent/ruleengine/lib/jenatest.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/dynagent/ruleengine/lib/jess.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/dynagent/ruleengine/lib/json.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/dynagent/ruleengine/lib/junit.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/dynagent/ruleengine/lib/log4j-1.2.12.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/dynagent/ruleengine/lib/lucene-core-2.0.0.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/dynagent/ruleengine/lib/stax-api-1.0.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/dynagent/ruleengine/lib/wstx-asl-3.0.0.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/dynagent/ruleengine/lib/xercesImpl.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/dynagent/ruleengine/lib/xml-apis.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/sqljdbc.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/commons-fileupload-1.0.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/ejb.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/j2ee.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/jdom.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/xerces.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/antlr-2.7.5.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/arq.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/commons-lang-2.0.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/commons-logging.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/concurrent.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/edtftpj-1.5.2.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/ekitspell.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/icu4j_3_4.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/iri.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/jcalendar.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/jena.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/json.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/junit.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/kazuki.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/lax.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/log4j-1.2.12.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/looks.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/owlsyntax.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/protege.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/protege-owl.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/stax-api-1.0.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/swrl-jess-bridge.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/unicode_panel.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/wstx-asl-2.8.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/xercesImpl.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protegejar/xml-apis.jar"/>
+	<classpathentry kind="lib" path="../lib/dynagent/ruleengine/lib/antlr-2.7.5.jar"/>
+	<classpathentry kind="lib" path="../lib/dynagent/ruleengine/lib/arq.jar"/>
+	<classpathentry kind="lib" path="../lib/dynagent/ruleengine/lib/arq-extra.jar"/>
+	<classpathentry kind="lib" path="../lib/dynagent/ruleengine/lib/commons-logging-1.1.jar"/>
+	<classpathentry kind="lib" path="../lib/dynagent/ruleengine/lib/concurrent.jar"/>
+	<classpathentry kind="lib" path="../lib/dynagent/ruleengine/lib/icu4j_3_4.jar"/>
+	<classpathentry kind="lib" path="../lib/dynagent/ruleengine/lib/iri.jar"/>
+	<classpathentry kind="lib" path="../lib/dynagent/ruleengine/lib/jena.jar"/>
+	<classpathentry kind="lib" path="../lib/dynagent/ruleengine/lib/jenatest.jar"/>
+	<classpathentry kind="lib" path="../lib/dynagent/ruleengine/lib/jess.jar"/>
+	<classpathentry kind="lib" path="../lib/dynagent/ruleengine/lib/json.jar"/>
+	<classpathentry kind="lib" path="../lib/dynagent/ruleengine/lib/junit.jar"/>
+	<classpathentry kind="lib" path="../lib/dynagent/ruleengine/lib/log4j-1.2.12.jar"/>
+	<classpathentry kind="lib" path="../lib/dynagent/ruleengine/lib/lucene-core-2.0.0.jar"/>
+	<classpathentry kind="lib" path="../lib/dynagent/ruleengine/lib/stax-api-1.0.jar"/>
+	<classpathentry kind="lib" path="../lib/dynagent/ruleengine/lib/wstx-asl-3.0.0.jar"/>
+	<classpathentry kind="lib" path="../lib/dynagent/ruleengine/lib/xercesImpl.jar"/>
+	<classpathentry kind="lib" path="../lib/dynagent/ruleengine/lib/xml-apis.jar"/>
+	<classpathentry kind="lib" path="../lib/sqljdbc.jar"/>
+	<classpathentry kind="lib" path="../lib/commons-fileupload-1.0.jar"/>
+	<classpathentry kind="lib" path="../lib/ejb.jar"/>
+	<classpathentry kind="lib" path="../lib/j2ee.jar"/>
+	<classpathentry kind="lib" path="../lib/jdom.jar"/>
+	<classpathentry kind="lib" path="../lib/xerces.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/antlr-2.7.5.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/arq.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/commons-lang-2.0.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/commons-logging.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/concurrent.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/edtftpj-1.5.2.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/ekitspell.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/icu4j_3_4.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/iri.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/jcalendar.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/jena.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/json.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/junit.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/kazuki.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/lax.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/log4j-1.2.12.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/looks.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/owlsyntax.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/protege.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/protege-owl.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/stax-api-1.0.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/swrl-jess-bridge.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/unicode_panel.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/wstx-asl-2.8.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/xercesImpl.jar"/>
+	<classpathentry kind="lib" path="../lib/protegejar/xml-apis.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/SERVER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Nucleo"/>
 	<classpathentry kind="output" path=""/>
