--- a/ServerScheduler/.classpath
+++ b/ServerScheduler/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Common"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/RuleEngine"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/jdom.jar"/>
+	<classpathentry kind="lib" path="../lib/jdom.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
