--- a/Tools/.classpath
+++ b/Tools/.classpath
@@ -2,26 +2,26 @@
 <classpath>
 	<classpathentry excluding="dynagent/tools/parsers/access/|dynagent/tools/importers/access/|dynagent/tools/parsers/uni/|dynagent/tools/parsers/uni/auxiliar/|dynagent/tools/importers/model/DataBaseInicializator.java|dynagent/tools/importers/report/|dynagent/tools/importers/testServer/TQueryDB.java|dynagent/tools/replica/installers/|dynagent/tools/replica/restore/" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/jdom.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/jasperreports-3.7.3.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/commons-lang-2.3.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/edu.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protege3.3jars/icu4j_3_4.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protege3.3jars/iri.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protege3.3jars/jena.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protege3.3jars/looks-2.1.3.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protege3.3jars/protege.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protege3.3jars/protege-owl.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protege3.3jars/commons-logging-1.1.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/protege3.3jars/xercesImpl.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/mysql-connector-java-5.1.6-bin.jar"/>
+	<classpathentry kind="lib" path="../lib/jdom.jar"/>
+	<classpathentry kind="lib" path="../lib/jasperreports-3.7.3.jar"/>
+	<classpathentry kind="lib" path="../lib/commons-lang-2.3.jar"/>
+	<classpathentry kind="lib" path="../lib/edu.jar"/>
+	<classpathentry kind="lib" path="../lib/protege3.3jars/icu4j_3_4.jar"/>
+	<classpathentry kind="lib" path="../lib/protege3.3jars/iri.jar"/>
+	<classpathentry kind="lib" path="../lib/protege3.3jars/jena.jar"/>
+	<classpathentry kind="lib" path="../lib/protege3.3jars/looks-2.1.3.jar"/>
+	<classpathentry kind="lib" path="../lib/protege3.3jars/protege.jar"/>
+	<classpathentry kind="lib" path="../lib/protege3.3jars/protege-owl.jar"/>
+	<classpathentry kind="lib" path="../lib/protege3.3jars/commons-logging-1.1.jar"/>
+	<classpathentry kind="lib" path="../lib/protege3.3jars/xercesImpl.jar"/>
+	<classpathentry kind="lib" path="../lib/mysql-connector-java-5.1.6-bin.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Server"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Common"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/RuleEngine"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/postgresql-9.0-801.jdbc4.jar"/>
+	<classpathentry kind="lib" path="../lib/postgresql-9.0-801.jdbc4.jar"/>
 	<classpathentry kind="con" path="DROOLS/Drools"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Migration"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/drools/drools-compiler-4.0.7.jar"/>
-	<classpathentry kind="lib" path="../../opensource/git/lib/drools/drools-core-4.0.7.jar"/>
+	<classpathentry kind="lib" path="../lib/drools/drools-compiler-4.0.7.jar"/>
+	<classpathentry kind="lib" path="../lib/drools/drools-core-4.0.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
